Tooltip overflow fix and refactoring

--- a/src/components/BarChart/BarChart.scss
+++ b/src/components/BarChart/BarChart.scss
@@ -8,12 +8,15 @@
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
     box-sizing: border-box;  
 
-    svg { display: block; }
+    svg { 
+        display: block;
+        overflow: visible;
+    }
 
     .domain {
         display: none;
     }
-
+    
     .tick {
         line {
             opacity: 0.7;
@@ -28,26 +31,11 @@
 
     .bar {
         fill: #326FAD;
-
         &.clicked {
             fill: #9CB9D7;
         }
-    }
-
-    .bar:hover {
-        fill: #9CB9D7;
-    }
-
-    .tip-container {
-        polygon, rect {
-            fill: #f6f6f6;
-        }
-
-        .tip-text {
-            font-family: $font-family-base;
-            font-size: 12px;
-            fill: #898989;
-            font-weight: 400;
+        &:hover {
+            fill: #9CB9D7;
         }
     }
 }
